--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,13 @@
         "php": ">=5.5.9",
         "illuminate/support": "~5.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.*",
+        "orchestra/testbench": "^3.0"
+    },
     "autoload": {
         "psr-4": {
+            "Gerardojbaez\\Messenger\\Tests\\": "tests",
             "Gerardojbaez\\Messenger\\": "src/Messenger/"
         }
     }
