--- a/.editorconfig
+++ b/.editorconfig
@@ -2,10 +2,10 @@ root = true
 
 [*]
 charset = utf-8
-indent_style = tab
+indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 
 [*.yml]
-indent_style = tab
+indent_style = space
 indent_size = 2
