--- a/.travis.yml
+++ b/.travis.yml
@@ -1,60 +1,14 @@
 language: php
 
+php:
+  - 5.6
+  - 7.0
+  - 7.1
+
 cache:
   directories:
     - $HOME/.composer/cache
 
-# Support Laravel >= 5.1
-matrix:
-  include:
-    # PHP 5.5.9 and Laravel v5.1 to v.5.2
-    - php: 5.5.9
-      env: ILLUMINATE_VERSION=5.1.*
-    - php: 5.5.9
-      env: ILLUMINATE_VERSION=5.2.*
-    # PHP 5.6.4 and Laravel v5.1 to v.5.4
-    - php: 5.6.4
-      env: ILLUMINATE_VERSION=5.1.*
-    - php: 5.6.4
-      env: ILLUMINATE_VERSION=5.3.*
-    - php: 5.6.4
-      env: ILLUMINATE_VERSION=5.4.*
-    # PHP 7.0.0 and Laravel v5.1 to v.5.5
-    - php: 7.0.0
-      env: ILLUMINATE_VERSION=5.1.*
-    - php: 7.0.0
-      env: ILLUMINATE_VERSION=5.2.*
-    - php: 7.0.0
-      env: ILLUMINATE_VERSION=5.3.*
-    - php: 7.0.0
-      env: ILLUMINATE_VERSION=5.4.*
-    - php: 7.0.0
-      env: ILLUMINATE_VERSION=5.5.*
-    # PHP 7.1.3 and Laravel v5.1 to v.5.6
-    - php: 7.1.3
-      env: ILLUMINATE_VERSION=5.1.*
-    - php: 7.1.3
-      env: ILLUMINATE_VERSION=5.2.*
-    - php: 7.1.3
-      env: ILLUMINATE_VERSION=5.3.*
-    - php: 7.1.3
-      env: ILLUMINATE_VERSION=5.4.*
-    - php: 7.1.3
-      env: ILLUMINATE_VERSION=5.5.*
-    - php: 7.1.3
-      env: ILLUMINATE_VERSION=5.6.*
-    # PHP 7.2 and Laravel v5.4 to v.5.6
-    - php: 7.2
-      env: ILLUMINATE_VERSION=5.4.*
-    - php: 7.2
-      env: ILLUMINATE_VERSION=5.5.*
-    - php: 7.2
-      env: ILLUMINATE_VERSION=5.6.*
-
-before_install:
-  - composer require "illuminate/database:${ILLUMINATE_VERSION}" --no-update -v
-  - composer require "illuminate/events:${ILLUMINATE_VERSION}" --no-update -v
-
-install: composer update --prefer-source --no-interaction --dev -v
-
-script: vendor/bin/phpunit --debug
+before_script:
+  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist
+  - composer dumpautoload -o
