--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Gerardo Báez",
-            "email": "gerardojbaez@gmail.com"
+            "email": "g@gerardobaez.com"
         }
     ],
     "minimum-stability": "dev",
