--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
-        "orchestra/testbench": "^3.0"
+        "orchestra/testbench": "~3.0"
     },
     "autoload": {
         "psr-4": {
